--- a/.gitignore
+++ b/.gitignore
@@ -9,5 +9,7 @@ ports/
 flask/ports
 sudo 
 interfaces.txt
-flask/int/intip.txt
-flask/int/intsubnet.txt
+int/intip.txt
+int/intsubnet.txt
+int/activehosts.txt
+int/activehostsoutputnmap.txt
